<resources>
    <string name="app_name">YCCEStudentLibraryJava</string>
    <string name="ycce_student_library">YCCE Student Library</string>
    <string name="login_screen_title">SignUp with Google</string>
    <string name="ycce">YCCE Student Library</string>


    <string name="ctech">Computer Technology</string>
    <string name="electrical">Electrical Engineering</string>
    <string name="electronics">Electronics Engineering</string>
    <string name="etc">ETC Engineering</string>
    <string name="fy">First Year</string>
    <string name="civil">Civil Engineering</string>
    <string name="mechanical">Mechanical Engineering</string>
    <string name="it">Information Technology</string>

    <string-array name="semesters_fy">
        <item>Semester-I</item>
        <item>Semester-II</item>
    </string-array>

    <string-array name="semesters">
        <item>Semester-III</item>
        <item>Semester-IV</item>
        <item>Semester-V</item>
        <item>Semester-VI</item>
        <item>Semester-VII</item>
        <item>Semester-VIII</item>
    </string-array>

    <string-array name="sem_name_fy">
        <item>sem1</item>
        <item>sem2</item>
    </string-array>
    <string-array name="sem_name">
        <item>sem3</item>
        <item>sem4</item>
        <item>sem5</item>
        <item>sem6</item>
        <item>sem7</item>
        <item>sem8</item>
    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Devanshu Vaidya</string>
    <string name="nav_header_subtitle">example123@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="home_page">YCCE Student Library</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Logout</string>


    <string name="recent">Recent</string>
    <string name="department">Department</string>
    <string name="other_features">Other Features</string>

    <string name="server_client_id">201887389567-faapcjfh1te96o55t9t1fgt2sb1ue7ic.apps.googleusercontent.com</string>

    <string-array name="Subjects">
        <item>Subject 1</item>
        <item>Subject 2</item>
        <item>Subject 3</item>
        <item>Subject 4</item>
        <item>Subject 5</item>
        <item>Subject 6</item>

    </string-array>

    <string-array name="course_code">
        <item>course 1</item>
        <item>course 2</item>
        <item>course 3</item>
        <item>course 4</item>
        <item>course 5</item>
        <item>course 6</item>

    </string-array>

    <string name="upload_title">Select Files to Upload</string>
    <string name="upload_res_button">Choose Document</string>
    <string name="upload_res_upload_but">Upload</string>
    <string name="upload_res1">Select Exam</string>
    <string name="upload_res2">Select Dept.</string>
    <string name="upload_res3">Select Sem.</string>
    <string name="upload_editText_hint">Enter Course Code</string>

    <string name="test_path">Path</string>
    <string name="instruction">Instruction to be added</string>


    <string name="toolbar_subjects">Subjects</string>
    <string name="toolbar_papers">Papers and Resources</string>

    <string name="year_hint">Paper year (Ex. 2019-20)</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

</resources>
