<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.syrous.yccestudentlibraryjava.ui.profile.FragmentProfile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.syrous.yccestudentlibraryjava.ui.about_us.FragmentAboutUs"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.syrous.yccestudentlibraryjava.ui.contact_us.FragmentContactUs"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.syrous.yccestudentlibraryjava.ui.GenFragment"
        android:label="@string/menu_logout"/>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.syrous.yccestudentlibraryjava.ui.home.FragmentHome"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home_scroll"/>


</navigation>