<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
<!--    tools:showIn="@layout/activity_home_scroll">-->
<!--    tools:context=".ui.home.ActivityHome"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="25dp"
            android:text="@string/recent"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="32sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="25dp"
            android:paddingBottom="10dp"
            android:text="@string/department"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="32sp">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:overScrollMode="never"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="25dp"
                android:paddingBottom="10dp"
                android:text="@string/other_features"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="32sp" />

            <Button
                android:id="@+id/more_features"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="18dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/more"
                android:padding="10dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_other_features"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>